src/styles/components/SearchResultsPage.module.css
.wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  padding-top: 20px;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: 0 10px;
}

.productsWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  padding: 10px;
  gap: 32px;
  width: 100%;
  height: 100dvh;
  overflow: scroll;
}

.title {
  font-size: 20px;
  color: var(--text_gray);
}

/* MEDIA QUERIES */
@media screen and (min-width: 991px) {
  .productsWrapper {
    flex-direction: row;
  }
}

